# PythonWithDrones

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  pytest.ini
.github/ISSUE_TEMPLATE/: level-request.md  level-submission.yml
.github/workflows/: keep-alive.yaml  nextjs.yml
LaTeX/: Abgabe.aux  Abgabe.blg  Abgabe.fdb_latexmk  Abgabe.fls  Abgabe.out  Abgabe.tex  Abgabe.toc
frontend/: Dockerfile.dev  EDITOR_PLAN.md  next.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/public/: game.py  py-worker.js  tile.glb
frontend/public/content/: docu.md
frontend/public/levels/: Level_1.yaml  Level_10.yaml  Level_11.yaml  Level_12.yaml  Level_13.yaml  Level_14.yaml  Level_15.yaml  Level_2.yaml  Level_3.yaml  Level_4.yaml  Level_5.yaml  Level_6.yaml  Level_7.yaml  Level_8.yaml  Level_9.yaml  Level_X.yaml  prototype_level.yaml
frontend/public/models/: dirt_tile.glb  drone_body.glb  grass_blade.glb  grass_tile.glb  pebble_1.glb  rotor.glb  stone_pillar_1.glb  stone_tile.glb  tile.glb  tree_1.glb  tree_leaves.glb  trunk_block_1.glb
leaderboard-api/: init.sql  requirements.txt
leaderboard-api/app/: auth.py  database.py  main.py  models.py  schemas.py
public/: drone.glb  spiel.py
python_with_drones/: drone.py
src/: App.jsx
src/components/: Drone.jsx  Grid.jsx  PythonConsole.jsx  Tile.jsx
tests/: requirements.txt  test_game.py
tests/drone/: conftest.py  test_game.py  test_model.py
tests/leaderboard_api/: conftest.py  test_auth.py  test_endpoints.py
(+86 files in other folders)
